--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "db:init": "node scripts/initDatabase.js",
+    "db:migrate": "node scripts/runMigration.js",
     "admin:create": "node scripts/createAdmin.js"
   },
   "dependencies": {
