--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "test": "jest --detectOpenHandles --forceExit",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "db:init": "node scripts/initDatabase.js",
     "db:migrate": "node scripts/runMigration.js",
     "admin:create": "node scripts/createAdmin.js"
@@ -23,6 +26,8 @@
     "mysql2": "^3.6.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.4"
   }
 }
