--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,11 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: backend/package-lock.json
     
     - name: Install backend dependencies
       run: |
         cd backend
-        npm ci
+        npm install
     
     - name: Run backend tests
       run: |
@@ -40,13 +38,11 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
     
     - name: Install frontend dependencies
       run: |
         cd frontend
-        npm ci --legacy-peer-deps
+        npm install --legacy-peer-deps
     
     - name: Run frontend tests
       run: |
@@ -68,11 +64,11 @@ jobs:
     - name: Build frontend
       run: |
         cd frontend
-        npm ci --legacy-peer-deps
+        npm install --legacy-peer-deps
         npm run build
     
     - name: Check backend syntax
       run: |
         cd backend
-        npm ci
+        npm install
         node -c server.js
