--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.5"
+    "mysql2": "^3.6.5",
+    "resend": "^2.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
