--- a/backend/.env.example
+++ b/backend/.env.example
@@ -22,9 +22,23 @@ JWT_EXPIRES_IN=7d
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:5173
 
+# Encryption Configuration
+# CRITICAL: Must be exactly 32 characters for AES-256-GCM encryption
+# Generate with: openssl rand -hex 16
+ENCRYPTION_KEY=CHANGE_THIS_TO_32_CHARACTER_KEY
+
+# Email Configuration (Optional - for password reset and notifications)
+# Sign up at https://resend.com for free tier (3000 emails/month)
+RESEND_API_KEY=re_YOUR_RESEND_API_KEY_HERE
+EMAIL_FROM=noreply@your-domain.com
+# For development testing only - use a verified email address
+TEST_EMAIL=your-test-email@example.com
+
 # Production Security Requirements:
 # 1. JWT_SECRET must be at least 256 bits (32+ characters) of random data
 # 2. DB_PASSWORD must be strong (16+ chars, mixed case, numbers, symbols)
-# 3. Never commit the actual .env file to version control
-# 4. Rotate secrets regularly
-# 5. Use environment-specific .env files (.env.production, .env.development)
+# 3. ENCRYPTION_KEY must be exactly 32 characters
+# 4. Never commit the actual .env file to version control
+# 5. Rotate secrets regularly
+# 6. Use environment-specific .env files (.env.production, .env.development)
+# 7. Keep RESEND_API_KEY secure - it can send emails from your domain
