chore: update documentation and cleanup for GDPR compliance
- Add GDPR compliance notice in README for deployers
- Update privacy policy and footer with configurable data controller
- Remove test-email.js from tracking
- Update .gitignore for email test files
- Add unsubscribe route to server

--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,14 @@ coverage/
 # Temporary files
 *.tmp
 temp/
+backend/docs
 
 # Production deployment files
 UPDATE_PRODUCTION.md
 
 # Security audit files
 audit_*.md
+
+# Local configuration overrides
+app.config.local.js
+frontend/src/config/app.config.local.js
