fix: create proper database migration system
- Replace hardcoded single migration runner with dynamic system
- Track executed migrations in database to prevent re-runs
- Move all migration files to organized migrations/ directory
- Handle duplicate column errors gracefully
- Migrations now run in order and only once
- Fix npm run db:migrate to work properly every time

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "db:init": "node scripts/initDatabase.js",
-    "db:migrate": "node scripts/runMigration.js",
+    "db:migrate": "node scripts/runMigrations.js",
     "admin:create": "node scripts/createAdmin.js"
   },
   "dependencies": {
